--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
       <div class="row">
         <div class="large-12 columns">
           <div class="orbit-container"><ul class="example-orbit orbit-slides-container" data-orbit="" style="height: 388px;">
-            <li class="active" style="z-index: 4; margin-left: 0%;"><img src="http://placehold.it/1000x400&amp;text=[%20img%201%20]"></li>
-            <li class="" style="z-index: 2; margin-left: 100%;"><img src="http://placehold.it/1000x400&amp;text=[%20img%202%20]"></li>
-            <li class="" style="z-index: 2; margin-left: 100%;"><img src="http://placehold.it/1000x400&amp;text=[%20img%203%20]"></li>
+            <li><img src="http://placehold.it/1000x400&amp;text=[%20img%201%20]"></li>
+            <li><img src="http://placehold.it/1000x400&amp;text=[%20img%202%20]"></li>
+            <li><img src="http://placehold.it/1000x400&amp;text=[%20img%203%20]"></li>
           </ul><a href="#" class="orbit-prev"><span></span></a><a href="#" class="orbit-next"><span></span></a><div class="orbit-timer paused"><span></span><div class="orbit-progress" style="width: 0%;"></div></div><div class="orbit-slide-number"><span>1</span> of <span>3</span></div><div class="orbit-bullets-container"><ol class="orbit-bullets"><li data-orbit-slide="0" class="active"></li><li data-orbit-slide="1" class=""></li><li data-orbit-slide="2" class=""></li></ol></div></div>
         </div>
       </div>
