--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -1,4 +1,5 @@
 <p>
   <%= t('.copyright', :year => Time.now.year,
-                      :site_name => Refinery::Core.site_name) %>
+                      :site_name => Refinery::Core.site_name) %>.
+  <%= link_to 'Login', login_path unless user_signed_in? %>
 </p>
